scss to fix jumping in finder modal

--- a/themes/grav/scss/template/_forms.scss
+++ b/themes/grav/scss/template/_forms.scss
@@ -551,7 +551,9 @@ textarea.frontmatter {
 
     .fjs-list {
         overflow: auto;
+        overflow-y: scroll;
         max-height: 400px;
+        min-height: 100%;
     }
 
     .fjs-item {
