--- a/themes/grav/scss/template/modules/_finderjs.scss
+++ b/themes/grav/scss/template/modules/_finderjs.scss
@@ -5,6 +5,7 @@
     font-size: .9em;
     min-height: 400px;
     overflow: auto;
+    overflow-x: scroll;
 }
 
 .fjs-container:focus {
